crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_when_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "whenever\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("whenever")

[=== formatted below ===]

