crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when.snap
---
source: crates/compiler/parse/src/cypress.rs
description: when abc is def -> ghi
---
(BeginTopLevelDecls
    HintExpr
    (BeginWhen Ident=>LowerIdent@1 Ident=>LowerIdent@3 Ident=>LowerIdent@5 EndWhen)
EndTopLevelDecls)
