crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_in_assignment_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x = when n is\n     0 -> 0\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginWhen
                Ident=>LowerIdent@3
                InlineKwIs=>KwIs@4
                Num=>IntBase10@5
                InlineWhenArrow=>OpArrow@6
                Num=>IntBase10@7
            EndWhen)
        EndAssign)
        HintExpr
        Num=>IntBase10@8
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), When(Ident("n"), [IntBase10("0"), IntBase10("0")]))
IntBase10("42")

[=== formatted below ===]

