crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_in_function_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "func = \\x -> when n is\n              0 -> 0\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                (BeginWhen
                    Ident=>LowerIdent@6
                    InlineKwIs=>KwIs@7
                    Num=>IntBase10@8
                    InlineWhenArrow=>OpArrow@9
                    Num=>IntBase10@10
                EndWhen)
            EndLambda)
        EndAssign)
        HintExpr
        Num=>IntBase10@11
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign("func", Lambda([Ident("x")], When(Ident("n"), [IntBase10("0"), IntBase10("0")])))
IntBase10("42")

[=== formatted below ===]

