crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_in_parens_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(when x is\n    Ok ->\n        3)\n\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginParens
        (BeginWhen
            Ident=>LowerIdent@2
            InlineKwIs=>KwIs@3
            UpperIdent=>UpperIdent@4
            InlineWhenArrow=>OpArrow@5
            (BeginBlock HintExpr Num=>IntBase10@6 EndBlock)
        EndWhen)
    EndParens)
EndTopLevelDecls)

[=== canfmt below ===]
When(Ident("x"), [UpperIdent("Ok"), Block([IntBase10("3")])])

[=== formatted below ===]

