crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_in_parens_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "when x is\n    Ok ->\n        3\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            UpperIdent=>UpperIdent@3
            InlineWhenArrow=>OpArrow@4
            (BeginBlock HintExpr Num=>IntBase10@5 EndBlock)
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [UpperIdent("Ok"), Block([IntBase10("3")])])

[=== formatted below ===]

