crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_in_parens_indented_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(when x is\n    Ok -> 3\n     )\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens
            (BeginWhen
                Ident=>LowerIdent@2
                InlineKwIs=>KwIs@3
                UpperIdent=>UpperIdent@4
                InlineWhenArrow=>OpArrow@5
                Num=>IntBase10@6
            EndWhen)
        EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [UpperIdent("Ok"), IntBase10("3")])

[=== formatted below ===]

